samples/_failures_safe/1761089687_2a496c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c65a8354.c: In function ‘main’:
./samples/SAFE/__tmp_c65a8354.c:180:16: error: missing terminating " character
  180 |         printf("[
      |                ^~
./samples/SAFE/__tmp_c65a8354.c:180:9: error: expected expression at end of input
  180 |         printf("[
      |         ^~~~~~
./samples/SAFE/__tmp_c65a8354.c:180:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c65a8354.c:180:9: error: expected declaration or statement at end of input
